# Simple-C-linked-list

./: ...  CMakeLists.txt  README.md  linked_list.c  linked_list.h  main.c  node.c  node.h
